Move _knn_eval into its own module